2009-04-09  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/monodocer.cs: Using a single IAssemblyResolver is
	  an improvement, but doesn't fix all problems.  In particular, some
	  assemblies will depend upon other assemblies to load (e.g. 3rd party
	  assemblies) but these dependent assemblies shouldn't be documented.
	  Add support for -r:ASSEMBLY and -L:DIRECTORY arguments to allow the
	  user to manually add to the assembly search path so that assemblies
	  can be found.  Assemblies added via -r will NOT be documented.

2009-04-08  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/monodocer.cs: Use a single IAssemblyResolver
	  shared amongst all AssemblyDefinitions to resolve assembly/type
	  references with Cecil.  Otherwise, if we have deeply nested
	  directories with cross-directory assembly dependencies, then Cecil
	  won't find the necessary assemblies (e.g. b/bin/Debug/b.dll has a
	  type which inherits from a/bin/Debug/a.dll -- here, we'll have two
	  separate AssemblyDefinitions, and when b.dll's AssemblyDefinition
	  tries to resolve types from a.dll, it fails).
	  See: http://lists.ximian.com/pipermail/mono-devel-list/2009-April/031646.html

2009-03-29  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/exceptions.cs: Add
	  ExceptionLocations.AddedMember, used for --exceptions=added support.
	* Mono.Documentation/monodocer.cs: Add --exceptions=added, which will 
	  only add <exception/> elements for newly added elements.  This is
	  useful for updating documentation for established projects which
	  already have <exception/> corrections (e.g. *removal* of
	  <exception/> elements because the exceptions weren't actually
	  possible), so only new members should have <exception/> created.

2009-03-20  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/monodocs2html.cs: Perform the timestamp check for
	  the top-level and namespace-level index files.

2009-03-21  Jonathan Pryor <jpryor@novell.com>
